--- a/views/admin/templates/footer.ejs
+++ b/views/admin/templates/footer.ejs
@@ -25,7 +25,7 @@
             $.ajax({
                
                   //  url:"http://localhost:5000/api/update_account",
-                  url:"https://btfd-io.up.railway.app/update_account",
+                  url:"/update_account",
                   method:"POST",
                   data:{
                       UserId: userid,
@@ -50,7 +50,7 @@
             const userid =$('#userid').val();
             const email = $('#email').val();
             $.ajax({
-                  url:"https://btfd-io.up.railway.app/api/admin_add_money",
+                  url:"/api/admin_add_money",
                    method:"POST",
                    data:{
                            UserId:userid,
