--- a/views/dashboard/pages-signUp.ejs
+++ b/views/dashboard/pages-signUp.ejs
@@ -71,7 +71,7 @@
 				}else{
 
 					 
-					$.post('https://btfd-io.up.railway.app/api/signup',
+					$.post('/api/signup',
 				       {
 
 						    Name:name,
