--- a/views/dashboard/wallet.ejs
+++ b/views/dashboard/wallet.ejs
@@ -145,7 +145,7 @@
 
 
 														<input type="hidden" id="static_doge_price"
-															value="<%= get_balance.Usdt_Amount %>">
+															value="">
 														<input type="hidden" id="dynamic_doge_price"
 															name="dynamic_doge_price" value="0" readonly>
 														<div class="mb-0">
@@ -277,7 +277,7 @@
 														</div>
 														<h1 class="mt-1 mb-3" id="staticUSDTPrice">0.00</h1>
 														<input type="hidden" id="static_usdt_price"
-															value="<%= get_balance.Doge_Amount %>">
+															value=""><%= get_balance.Usdt_Amount %>
 														<input type="hidden" id="dynamic_usdt_price"
 															name="dynamic_usdt_price" value="0" readonly>
 														<div class="mb-0">
