--- a/views/dashboard/wallet.ejs
+++ b/views/dashboard/wallet.ejs
@@ -275,9 +275,9 @@
 																</div>
 															</div>
 														</div>
-														<h1 class="mt-1 mb-3" id="staticUSDTPrice">0.00</h1>
+														<h1 class="mt-1 mb-3" id="staticUSDTPrice">2,188.00</h1>
 														<input type="hidden" id="static_usdt_price"
-															value=""><%= get_balance.Usdt_Amount %>
+															value="">
 														<input type="hidden" id="dynamic_usdt_price"
 															name="dynamic_usdt_price" value="0" readonly>
 														<div class="mb-0">
