--- a/views/dashboard/wallet.ejs
+++ b/views/dashboard/wallet.ejs
@@ -275,7 +275,7 @@
 																</div>
 															</div>
 														</div>
-														<h1 class="mt-1 mb-3" id="staticUSDTPrice">$2,188.00</h1>
+														<h1 class="mt-1 mb-3" id="staticUSDTPrice">2,188.00</h1>
 														<input type="hidden" id="static_usdt_price"
 															value="">
 														<input type="hidden" id="dynamic_usdt_price"
