--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="/css/tiny-slider.css" />
     <link rel="stylesheet" href="/css/glightbox.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
-   <script src="//code.jivosite.com/widget/5tW0tKXkIQ" async></script>
+   
+<script src="//code.jivosite.com/widget/v5JUgA9lr5" async></script>
 
 </head>
 <body>
