--- a/views/dashboard/template/header.ejs
+++ b/views/dashboard/template/header.ejs
@@ -36,7 +36,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-<script src="//code.jivosite.com/widget/5tW0tKXkIQ" async></script>
+<script src="//code.jivosite.com/widget/v5JUgA9lr5" async></script>
+
 	<style>
 		.red { color: red; } /* Red for negative change */
         .green { color: green; } /* Green for positive change */
