--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -6,7 +6,7 @@
 				<div class="container-fluid p-0">
 
 					<h1 class="h3 mb-3"> Dashboard</h1>
-					 <p class="alert alert-info">Your Withdrawal Has been Withdrawal Enabled. (Please contact admin for transfer of funds)</p>
+					 <p class="alert alert-info">Your Withdrawal Has been Enabled. (Please contact admin for transfer of funds)</p>
 					<div class="row">
 						<div class="col-xl-12 col-xxl-5 d-flex">
 							<div class="w-100">
