--- a/views/dashboard/wallet.ejs
+++ b/views/dashboard/wallet.ejs
@@ -150,8 +150,8 @@
 															name="dynamic_doge_price" value="0" readonly>
 														<div class="mb-0">
 															<span class="text-danger">
-																<i class="mdi mdi-arrow-bottom-right"
-																	id="dogeChange24h">Pay $312  gas fee</i>
+																<!--<i class="mdi mdi-arrow-bottom-right"
+																	id="dogeChange24h">Pay $312  gas fee</i>-->
 															</span>
 															<span class="text-muted"></span>
 														</div>
