--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/glightbox.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
    
-<script src="//code.jivosite.com/widget/v5JUgA9lr5" async></script>
+   <script src="//code.jivosite.com/widget/cv2bXa6xUN" async></script>
 
 </head>
 <body>
