--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/glightbox.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
    
-   <script src="//code.jivosite.com/widget/cv2bXa6xUN" async></script>
+  <script src="//code.jivosite.com/widget/kPU1UW3TW7" async></script>
 
 </head>
 <body>
